[project]
name = "mockernetes"
version = "0.1.0"
description = "A moto-like library for mocking Kubernetes API in Python tests with stateful in-memory behavior"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kubernetes>=34.1.0",
    "pytest>=9.0.2",
]

[project.urls]
Repository = "https://github.com/tofarr/mockernetes"

[project.optional-dependencies]
dev = [
    "black>=23.3",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.2",
    "pylint>=3.0",
]

[project.scripts]
mockernetes = "mockernetes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mockernetes"]

[tool.hatch.build.targets.sdist]
exclude = ["tests*", "examples"]

[dependency-groups]
dev = [
    "hatch-vcs>=0.5.0",
    "hatchling>=1.28.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
